--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,8 @@ code {
 }
 .me-main{
   position: relative;
+  height: 100vh;
+  width: 100%;
 }
 
 .contain{
@@ -42,7 +44,7 @@ code {
 }
 
 .main_container{
-  height: fit-content;
+  height: max-content;
   width: 440px;
   border-radius: 10px;
   padding: 5px;
